# legendary-potato

./: .gitignore  README.md  run.py
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: deps.py  main.py
backend/app/db/: engine.py  models.py
backend/app/db/migrations/: 001_init.sql  002_seed_categories.sql  003_member_column.sql  004_savings_holdings.sql  005_savings_plans.sql  006_drift_band.sql  007_savings_deposits.sql
backend/app/routers/: accounts.py  budgets.py  categories.py  importing.py  insights.py  links.py  reports.py  rules.py  savings.py  settings.py  transactions.py
backend/app/services/: cashflow_forecast.py  categories.py  dedup.py  fingerprint.py  insights.py  links.py  normalize.py  observations.py  parsing.py  recurring.py  rules.py  savings.py  savings_plan.py
backend/app/tests/: conftest.py  test_db.py  test_e2e.py  test_import_flow.py  test_insights_links.py  test_new_features.py  test_parsing.py  test_review_fixes.py  test_rules.py  test_savings_deposits.py  test_savings_holdings.py  test_savings_plan.py
backend/app/tests/fixtures/: amex.xlsx  duplicate_coffee.csv  entercard.csv  generate_fixtures.py  handelsbanken_konto.xlsx  handelsbanken_kort.csv  handelsbanken_platinum.xlsx  nordea.csv  overlap_a.csv  overlap_b.csv  preamble.csv  seb.xlsx  swedbank.csv
backend/kassaboken.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/superpowers/plans/: 2026-07-18-engangsinsattningar.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+34 files in other folders)
