[project]
name = "kassaboken"
version = "0.1.0"
description = "Lokal privatekonomi-dashboard: import, kategorisering, insikter och sparande"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "fpdf2>=2.7"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
